--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,9 @@ body, html {
   flex-direction: column;
   justify-content: center;
   align-content: center;
+  border: 1px solid black;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 #screen {
@@ -22,6 +25,9 @@ body, html {
   width: auto;
   border: 1px solid black;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #numContainer {
