--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body, html {
 }
 
 #calcContainer {
-  width: 300px;
+  width: 250px;
   height: 400px;
   display: flex;
   flex-direction: column;
@@ -28,6 +28,7 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 30px;
 }
 
 #numContainer {
@@ -52,6 +53,7 @@ body, html {
 #numAndOperatorContainer {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 #clearBtn {
