Add shadow and hover effect to buttons

--- a/styles.css
+++ b/styles.css
@@ -9,24 +9,20 @@ body, html {
   color: inherit;
 }
 
-button {
-  font-size: 25px;
-}
-
 #calcContainer {
   width: 380px;
-  height: 600px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
   border: 1px solid black;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 #screen {
-  height: 100px;
+  height: 200px;
   width: auto;
   border: 1px solid black;
   margin-bottom: 10px;
@@ -34,6 +30,7 @@ button {
   justify-content: center;
   align-items: center;
   font-size: 30px;
+  margin-top: 10px;
 }
 
 #numContainer {
@@ -85,4 +82,17 @@ button {
 
 #equals {
   height: 55px;
+}
+
+button {
+  font-size: 25px;
+  border-radius: 0px;
+  border: 1px solid black;
+  transition-duration: 0.1s;
+}
+
+button:hover {
+  background-color: white;
+  color: black;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.24), 0 2px 2px 0 rgba(0,0,0,0.19);
 }
