--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body, html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  touch-action: manipulation;
 }
 
 #calcContainer {
@@ -17,8 +18,6 @@ body, html {
   justify-content: center;
   align-content: center;
   border: 1px solid black;
-  padding-left: 10px;
-  padding-right: 10px;
   border-radius: 30px;
 }
 
@@ -26,7 +25,7 @@ body, html {
   height: auto;
   width: auto;
   border: 1px solid black;
-  margin-bottom: 10px;
+  margin: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
