--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body, html {
   width: auto;
   border: 1px solid black;
   margin: 20px;
-  display: flex;
+  display: block;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -34,15 +34,20 @@ body, html {
   border-radius: 50px;
 }
 
+#memoryWrapper {
+    overflow-y: auto;
+}
+
 #expressionMemory {
   height: 150px;
   width: 100%;
   font-size: 20px;
   background-color: #f2f2f2;
-  display: flex;
+  display: block;
+  position: 100%;
   flex-direction: column;
   justify-content: flex-end;
-  overflow-y: auto;
+
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
 }
@@ -117,7 +122,7 @@ body, html {
 }
 
 #expressionUsed:hover {
-  background-color:#4f4f4f;
+  background-color:#8a8a8a;
 }
 
 button {
