--- a/styles.css
+++ b/styles.css
@@ -26,16 +26,12 @@ body, html {
   width: auto;
   border: 1px solid black;
   margin: 20px;
-  display: block;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  border-radius: 50px;
-}
-
-#memoryWrapper {
-    overflow-y: auto;
+  border-radius: 20px;
 }
 
 #expressionMemory {
@@ -43,11 +39,6 @@ body, html {
   width: 100%;
   font-size: 20px;
   background-color: #f2f2f2;
-  display: block;
-  position: 100%;
-  flex-direction: column;
-  justify-content: flex-end;
-
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
 }
