--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,14 @@ body, html {
 #clearBtn {
   width: 100px;
   height: 40px;
-  margin: 10px;
+  margin: 5px;
+}
+
+#clearMemBtn {
+  width: 100px;
+  height: 40px;
+  margin: 5px;
+  font-size: 17px;
 }
 
 #clearBtnArea {
